# bzl-sandbox

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: ci.yaml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/dr-image/: BUILD.bazel
projects/my-python-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
